sepoaracion de steps

--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -31,13 +31,15 @@ jobs:
         date
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Check FTP for new files to update input
+    - name: Set dvc remote and dvc pull
       run: |
           dvc remote add origin https://dagshub.com/itare/MinCienciaCovid19.dvc
           dvc remote modify origin --local auth basic
           dvc remote modify origin --local user itare
           dvc remote modify origin --local password  ${{ secrets.DAGS_TOKEN }} 
           
+    - name: dvc pull and 
+      run: |      
           dvc pull 
           git clone https://${{ secrets.GH_TOKEN }}@github.com/MinCiencia/MinCienciaDataPreparation.git /data-prep
           cp /data-prep/output/ReporteDiario ./input/
