--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -37,7 +37,8 @@ jobs:
           dvc remote modify origin --local auth basic
           dvc remote modify origin --local user itare
           dvc remote modify origin --local password  ${{ secrets.DAGS_TOKEN }} 
-          dvc pull 
+          dvc pull -r origin
+          
     - name: git clone y mas 
       run: |      
           git clone https://${{ secrets.GH_TOKEN }}@github.com/MinCiencia/MinCienciaDataPreparation.git /data-prep
