--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -4,7 +4,7 @@ name: reporte_diario_daily_processing
 # events but only for the master branch
 on:
     schedule:
-      - cron:  '*/5 * * * *'
+      - cron:  '*/30 4 */7 * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
