--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -3,6 +3,7 @@ name: reporte_diario_daily_processing
 # Controls when the action will run. Triggers the workflow on push or pull request 
 # events but only for the master branch
 on:
+    workflow_dispatch:
     schedule:
       - cron:  '*/20 * * * *'
 
