--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -52,8 +52,9 @@ jobs:
         cp -r /tmp/data-prep/output/DistribucionDEIS ./input/
         cd src
         python distribucionDEIS.py
+        cd ..
         dvc add input/DistribucionDEIS/*.csv
-        dvc add ../output/NuevaDefDefunciones/DefuncionesDEIS.csv
+        dvc add /output/NuevaDefDefunciones/DefuncionesDEIS.csv
 
     - name: dvc push 
       run: |
