--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -64,9 +64,26 @@ jobs:
         dvc add output/producto51 
         dvc add output/producto82
 
+    - name: 'Check out datagovuc/ICOVID'
+      uses: actions/checkout@v2
+      env:
+        GITHUB_TOKEN: ${{ secrets.DO_AUTOMATION_BOT_PAT }}
+      with:
+          token: ${{ env.GITHUB_TOKEN }}
+          repository: datagovuc/ICOVID
+          path: /tmp/ICOVID
+   
+    - name: ga uc 
+      run: |
+        rsync -av --exclude "README.md" /tmp/ICOVID/DO/ Datos-COVID19/input/UC
+        cd Datos-COVID19/src
+        python UC.py   
+        dvc add output/producto53
+
     - name: dvc push 
       run: |
           dvc push -r origin
+      
           
     - uses: stefanzweifel/git-auto-commit-action@v4.1.1
       with:
