--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 docutils==0.15.2
-dvc
+dvc==2.3.0
 entrypoints==0.3
 et-xmlfile==1.0.1
 google-api-python-client==1.12.8
